<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.FeedFragment">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:gravity="center"
        app:showAsAction="never"
        />

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/remove"
        android:title="@string/remove"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="300"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
    </group>
</menu>

