<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_avatar_24"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier" />


    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textSize="13sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:text="@string/zagolovok"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="13sp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:text="@string/datatime" />


    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_scrolling"
        android:minWidth="24dp"
        android:minHeight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_options_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier" />


    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="16sp"
        android:lineHeight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier"
        android:text="@string/content"
        tools:targetApi="p"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/link"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/http_netology_fyb"
        app:layout_constraintBottom_toBottomOf="@+id/content"
        app:layout_constraintEnd_toEndOf="@+id/content"
        app:layout_constraintStart_toStartOf="@+id/content"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, options" />


    <ImageButton
        android:onClick="likeCount"
        android:id="@+id/like"
        android:layout_width="60dp"
        android:layout_height="41dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/numberLike"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/ic_like_24"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,RtlSymmetry,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/numberLike"
        android:layout_width="@dimen/size_text_view"
        android:layout_height="@dimen/size_text_view"
        android:text="@string/numberLike"
        app:layout_constraintLeft_toRightOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="TextContrastCheck"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/numberShare"
        app:srcCompat="@drawable/ic_share_24"
        app:layout_constraintLeft_toRightOf="@id/numberLike"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/numberShare"
        android:layout_width="@dimen/size_text_view"
        android:layout_height="@dimen/size_text_view"
        android:text="@string/numberShare"
        app:layout_constraintLeft_toRightOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp" />

    <ImageButton
        android:id="@+id/eye"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/numberEye"
        app:srcCompat="@drawable/ic_eye_24"
        app:layout_constraintLeft_toRightOf="@id/numberShare"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginStart="130dp" />

    <TextView
        android:id="@+id/numberEye"
        android:layout_width="@dimen/size_text_view"
        android:layout_height="@dimen/size_text_view"
        android:text="@string/numberEye"
        app:layout_constraintLeft_toRightOf="@id/eye"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

