<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.FeedFragment"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_avatar_24"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier" />


    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="10sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier"
        android:text="@string/zagolovok" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="10sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:text="@string/datatime" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppTheme.Options"
        app:icon="@drawable/ic_options_24"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/menu_scrolling"
        android:checkable="true"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="20dp"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, options" />

    <ScrollView
    android:id="@+id/detailsScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/lowerBarrier"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/headerBarrier">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:ellipsize="end"
            android:text="@string/content"
            app:layout_constraintBottom_toTopOf="@id/videoFrameInPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            tools:text="@tools:sample/lorem/random" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/postVideoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:background="@android:color/background_light"
            app:constraint_referenced_ids="videoFrameInPost" />

        <include
            android:id="@+id/videoFrameInPost"
            layout="@layout/video_content_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:visibility="visible" />

</LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/lowerBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="like, share, eye" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/numberLike"
        app:icon="@drawable/ic_like_24dp"
        android:checkable="true"
        android:background="@drawable/ic_heart_24"
        app:layout_constraintTop_toBottomOf="@id/lowerBarrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="990"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/numberShare"
        app:icon="@drawable/ic_share_24"
        android:checkable="true"
        app:layout_constraintLeft_toRightOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/lowerBarrier"
        tools:text="990"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eye"
        style="@style/Widget.AppTheme.Eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/numberShare"
        app:icon="@drawable/ic_eye_24"
        android:checkable="true"
        app:layout_constraintLeft_toRightOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/lowerBarrier"
        tools:text="990"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

